--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -115,7 +115,7 @@
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
                 <li class="menu-item">
-                    <a href="download">@Model.Value("solutions")</a>
+                    <a href="download/businessv7">@Model.Value("solutions")</a>
                 </li>
                 <li class="menu-item">
                     <a href="delivery.html">@Model.Value("products")</a>
@@ -293,7 +293,7 @@
                                     <a href="delivery.html">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="download">@Model.Value("solutions")</a>
+                                    <a href="download/businessv7">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="payment.html">@Model.Value("about")</a>
