--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -103,7 +103,7 @@
                         </svg>
                     </button>
 
-                    <a href="home" class="logo">
+                    <a href="/home" class="logo">
                         Mekashron
                     </a>
 
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="footer__inner">
                 <div class="column">
-                    <a href="home" class="logo">
+                    <a href="/home" class="logo">
                         Mekashron
                     </a>
                     <p>
