--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -59,7 +59,7 @@
                     <img src="/assets/images/icons/burger.svg" alt="menu">
                 </button>
 
-                <a href="home" class="logo">
+                <a href="/home" class="logo">
                     Mekashron
                 </a>
 
@@ -103,7 +103,7 @@
                         </svg>
                     </button>
 
-                    <a href="home" class="logo">
+                    <a href="/home" class="logo">
                         Mekashron
                     </a>
 
@@ -205,7 +205,7 @@
         <div class="container">
             <div class="footer__inner">
                 <div class="column">
-                    <a href="home" class="logo">
+                    <a href="/home" class="logo">
                         Mekashron
                     </a>
                     <p>
