--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -181,6 +181,8 @@
                                id="phone"
                                name="phone"
                                ng-model="vm.form.phone"
+                               ng-maxlength="20"
+                               maxlength="20"
                                required>
                     </div>
 
