--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -348,7 +348,7 @@
                         .then(function (response) {
                             var data = response.data;
                             if (data && data.success) {
-                                alert('recordId: ' + data.recordId);
+                                //alert('recordId: ' + data.recordId);
                                 window.location = '/thankyou/'+getFileKey();
                             } else {
                                 alert('Error: ' + (data && data.error ? data.error : 'Unknown error'));
