--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -66,7 +66,7 @@
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
                         <li class="menu-item">
-                            <a href="download">@Model.Value("solutions")</a>
+                            <a href="/download">@Model.Value("solutions")</a>
                         </li>
                         <li class="menu-item">
                             <a href="delivery.html">@Model.Value("products")</a>
@@ -117,7 +117,7 @@
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
                 <li class="menu-item">
-                    <a href="download">@Model.Value("solutions")</a>
+                    <a href="/download">@Model.Value("solutions")</a>
                 </li>
                 <li class="menu-item">
                     <a href="delivery.html">@Model.Value("products")</a>
@@ -223,7 +223,7 @@
                                     <a href="delivery.html">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="download">@Model.Value("solutions")</a>
+                                    <a href="/download">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="payment.html">@Model.Value("about")</a>
@@ -321,7 +321,7 @@
 
                     var last = parts[parts.length - 1].toLowerCase();
                     if (last === "download") {
-                        return "callcenterV7"; // дефолт
+                        return "businessV7"; // дефолт
                     }
 
                     // берём всегда ПОСЛЕДНИЙ сегмент после /download/
