--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -219,7 +219,7 @@
                             <h3>Mekashron CRM</h3>
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
-                                <a href="#" class="button button--accent">@Model.Value("downloadButton")</a>
+                                <a href="download/businessv7" class="button button--accent">@Model.Value("downloadButton")</a>
                                 <a href="#" class="link">@Model.Value("learnMore")</a>
                             </div>
                         </div>
