--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -58,11 +58,18 @@
                 <button class="burger" id="burgerButton">
                     <img src="/assets/images/icons/burger.svg" alt="menu">
                 </button>
-
-                <a href="/home" class="logo">
-                    Mekashron
-                </a>
-
+                @if (currentLangCode == "en")
+                {
+                    <a href="/" class="logo">
+                        Mekashron
+                    </a>
+                }
+                else
+                {
+                    <a href="/@currentLangCode" class="logo">
+                        Mekashron
+                    </a>
+                }
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
                         <li class="menu-item">
@@ -103,9 +110,18 @@
                         </svg>
                     </button>
 
-                    <a href="/home" class="logo">
-                        Mekashron
-                    </a>
+                    @if (currentLangCode == "en")
+                    {
+                        <a href="/" class="logo">
+                            Mekashron
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="/@currentLangCode" class="logo">
+                            Mekashron
+                        </a>
+                    }
 
                     <div class="header__actions row">
                         <a href="#" class="button">@Model.Value("getInTouch")</a>
@@ -159,9 +175,18 @@
         <div class="container">
             <div class="footer__inner">
                 <div class="column">
-                    <a href="/home" class="logo">
-                        Mekashron
-                    </a>
+                    @if (currentLangCode == "en")
+                    {
+                        <a href="/" class="logo">
+                            Mekashron
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="/@currentLangCode" class="logo">
+                            Mekashron
+                        </a>
+                    }
                     <p>
                         @Html.Raw(Model.Value("footerText"))
                     </p>
