--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -163,7 +163,7 @@
                     @Html.Raw(Model.Value("anyquestions"))
                 </div>
                 <p style="text-align: center; color: #800000;">
-                    <a ng-href="http://files.mekashron.com/mekashron{{vm.fileKey}}.exe">
+                    <a ng-href="http://files-s.mekashron.com/mekashron{{vm.fileKey}}.exe">
                         @Html.Raw(Model.Value("downloadtext"))
                     </a>
                 </p>
@@ -235,7 +235,7 @@
                             <button class="language" id="language_btn" type="button">
                                 <ul id="language-menu" class="language__list">
                                     <li id="menu-item-113">
-                                        <a href="#pll_switcher">
+                                        <a>
                                             <img src="@currentLangFlag" alt="@currentLangName" width="16" height="11" />
                                             <span>@currentLangName</span>
                                         </a>
@@ -303,7 +303,7 @@
                     return parts[parts.length - 1];
                 }
                 vm.fileKey = getFileKey();
-                vm.downloadUrl = "http://files.mekashron.com/mekashron" + vm.fileKey + ".exe";
+                vm.downloadUrl = "http://files-s.mekashron.com/mekashron" + vm.fileKey + ".exe";
 
                 // авто-скачивание 
                 $window.location.href = vm.downloadUrl;
