--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -75,7 +75,14 @@
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
                         <li class="menu-item">
-                            <a href="/download">@Model.Value("solutions")</a>
+                            @if (currentLangCode == "en")
+                            {
+                                <a href="/download">@Model.Value("solutions")</a>
+                            }
+                            else
+                            {
+                                <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                            }
                         </li>
                         <li class="menu-item">
                             <a href="delivery.html">@Model.Value("products")</a>
@@ -330,7 +337,7 @@
 <script src="/assets/js/jquery-3.7.1.min.js"></script>
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
-<script src="/assets/js/scripts.js"></script>
+<script src="/assets/js/_scripts.js"></script>
 <script>
     (function () {
         'use strict';
