--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -279,7 +279,7 @@
 <script src="/assets/js/jquery-3.7.1.min.js"></script>
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
-<script src="/assets/js/scripts.js"></script>
+<script src="/assets/js/_scripts.js"></script>
 <script>
     (function () {
         'use strict';
