--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -142,8 +142,15 @@
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
                 <li class="menu-item">
+                    @if (currentLangCode == "en")
+                    {
                     <a href="/download">@Model.Value("solutions")</a>
-                </li>
+                    }
+                    else
+                    {
+                    <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                    }
+                    </li>
                 <li class="menu-item">
                     <a href="delivery.html">@Model.Value("products")</a>
                 </li>
@@ -258,8 +265,15 @@
                                     <a href="delivery.html">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/download">@Model.Value("solutions")</a>
-                                </li>
+                                    @if (currentLangCode == "en")
+                                    {
+                                        <a href="/download">@Model.Value("solutions")</a>
+                                    }
+                                    else
+                                    {
+                                        <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                                    }
+                                    </li>
                                 <li class="menu-item">
                                     <a href="payment.html">@Model.Value("about")</a>
                                 </li>
