--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -296,7 +296,7 @@
                             <nav class="footer__links">
                                 <ul class="footer__links--list">
                                     <li>
-                                        <a href="https://wa.me/#" target="_blank" rel="noopener">
+                                        <a href="https://wa.me/97235603536" target="_blank" rel="noopener">
                                             <img src="/assets/images/icons/whatsapp-icon.svg" alt="WhatsApp">
                                             @Model.Value("contactUs")
                                         </a>
