--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -199,7 +199,7 @@
                             <h3>Profichat.net</h3>
                             <p>@Model.Value("profichat")</p>
                             <div class="buttons">
-                                <a href="#" class="button button--dark">@Model.Value("learnMore")</a>
+                                <a href="https://www.profichat.net" class="button button--dark">@Model.Value("learnMore")</a>
                             </div>
                         </div>
                     </li>
@@ -209,7 +209,7 @@
                             <h3>ZMenu.net</h3>
                             <p>@Model.Value("zmenu")</p>
                             <div class="buttons">
-                                <a href="#" class="button button--dark">@Model.Value("learnMore")</a>
+                                <a href="https://www.zmenu.net" class="button button--dark">@Model.Value("learnMore")</a>
                             </div>
                         </div>
                     </li>
@@ -311,7 +311,7 @@
                             <nav class="footer__links">
                                 <ul class="footer__links--list">
                                     <li>
-                                        <a href="https://wa.me/#" target="_blank" rel="noopener">
+                                        <a href="https://wa.me/97235603536" target="_blank" rel="noopener">
                                             <img src="/assets/images/icons/whatsapp-icon.svg" alt="WhatsApp">
                                             @Model.Value("contactUs")
                                         </a>
