--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -220,7 +220,9 @@
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
                                 <a href="download/businessv7" class="button button--accent">@Model.Value("downloadButton")</a>
-                                <a href="#" class="link">@Model.Value("learnMore")</a>
+                                @*<a href="https://www3.mekashron.com/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
+                                <a href="https://www3.mekashron.com/blog/" class="link">@Model.Value("learnMore")</a>
+
                             </div>
                         </div>
                     </li>
