--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -66,8 +66,29 @@
                         <li class="menu-item">
                             <a href="download/businessV7">@Model.Value("solutions")</a>
                         </li>
-                        <li class="menu-item">
-                            <a href="delivery.html">@Model.Value("products")</a>
+                        <li class="menu-item menu-item-has-children">
+                            <a href="#">Products</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Business-CRM">Mekashron Business
+                                        - CRM for business</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Call-Center-CRM">Mekashron Call
+                                        Center - CRM for call center</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Retailer-POS">Mekashron Retailer POS
+                                        - POS for retailers</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Restaurant-POS">Mekashron
+                                        Restaurant POS - POS for restaurant</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Cheque-printing-software">Mekashron Cheque printing software</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item">
                             <a href="blog.html">@Model.Value("industries")</a>
@@ -117,8 +138,29 @@
                 <li class="menu-item">
                     <a href="download/businessv7">@Model.Value("solutions")</a>
                 </li>
-                <li class="menu-item">
-                    <a href="delivery.html">@Model.Value("products")</a>
+                <li class="menu-item menu-item-has-children">
+                    <a href="#">Products</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Business-CRM">Mekashron Business
+                                - CRM for business</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Call-Center-CRM">Mekashron Call
+                                Center - CRM for call center</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Retailer-POS">Mekashron Retailer POS
+                                - POS for retailers</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Restaurant-POS">Mekashron
+                                Restaurant POS - POS for restaurant</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Cheque-printing-software">Mekashron Cheque printing software</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="menu-item">
                     <a href="blog.html">@Model.Value("industries")</a>
@@ -221,7 +263,7 @@
                             <div class="buttons">
                                 <a href="download/businessv7" class="button button--accent">@Model.Value("downloadButton")</a>
                                 @*<a href="https://www3.mekashron.com/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
-                                <a href="https://www3.mekashron.com/blog/" class="link">@Model.Value("learnMore")</a>
+                                <a href="https://www3.mekashron.com/blog/en" class="link">@Model.Value("learnMore")</a>
 
                             </div>
                         </div>
