--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -82,10 +82,10 @@
                             <a href="blog.html">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="payment.html">@Model.Value("about")</a>
+                            <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="payment.html">@Model.Value("contacts")</a>
+                            <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
                         </li>
                     </ul>
                 </nav>
@@ -203,13 +203,13 @@
                                     <a href="download">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="payment.html">@Model.Value("about")</a>
+                                    <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="blog.html">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="payment.html">@Model.Value("contacts")</a>
+                                    <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
                                 </li>
                             </ul>
                         </nav>
