--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -84,8 +84,25 @@
                                 <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
                             }
                         </li>
-                        <li class="menu-item">
-                            <a href="delivery.html">@Model.Value("products")</a>
+                        <li class="menu-item menu-item-has-children">
+                            <a href="#">@Model.Value("products")</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item">
                             <a href="blog.html">@Model.Value("industries")</a>
@@ -151,8 +168,25 @@
                     <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
                     }
                     </li>
-                <li class="menu-item">
-                    <a href="delivery.html">@Model.Value("products")</a>
+                <li class="menu-item menu-item-has-children">
+                    <a href="#">@Model.Value("products")</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="menu-item">
                     <a href="blog.html">@Model.Value("industries")</a>
