--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -67,26 +67,22 @@
                             <a href="download/businessV7">@Model.Value("solutions")</a>
                         </li>
                         <li class="menu-item menu-item-has-children">
-                            <a href="#">Products</a>
+                            <a>@Model.Value("products")</a>
                             <ul class="sub-menu">
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Business-CRM">Mekashron Business
-                                        - CRM for business</a>
+                                    <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Call-Center-CRM">Mekashron Call
-                                        Center - CRM for call center</a>
+                                    <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Retailer-POS">Mekashron Retailer POS
-                                        - POS for retailers</a>
+                                    <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Restaurant-POS">Mekashron
-                                        Restaurant POS - POS for restaurant</a>
+                                    <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Cheque-printing-software">Mekashron Cheque printing software</a>
+                                    <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                                 </li>
                             </ul>
                         </li>
@@ -139,26 +135,22 @@
                     <a href="download/businessv7">@Model.Value("solutions")</a>
                 </li>
                 <li class="menu-item menu-item-has-children">
-                    <a href="#">Products</a>
+                    <a href="#">@Model.Value("products")</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="/blog/en/page/Business-CRM">Mekashron Business
-                                - CRM for business</a>
+                            <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Call-Center-CRM">Mekashron Call
-                                Center - CRM for call center</a>
+                            <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Retailer-POS">Mekashron Retailer POS
-                                - POS for retailers</a>
+                            <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Restaurant-POS">Mekashron
-                                Restaurant POS - POS for restaurant</a>
+                            <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Cheque-printing-software">Mekashron Cheque printing software</a>
+                            <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                         </li>
                     </ul>
                 </li>
