--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -108,10 +108,10 @@
                             <a href="blog.html">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                            <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                            <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                         </li>
                     </ul>
                 </nav>
@@ -192,10 +192,10 @@
                     <a href="blog.html">@Model.Value("industries")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("about")</a>
+                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("contacts")</a>
+                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                 </li>
             </ul>
         </nav>
@@ -315,13 +315,13 @@
                                     }
                                     </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="blog.html">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                                 </li>
                             </ul>
                         </nav>
