--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -90,10 +90,10 @@
                             <a href="blog.html">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                            <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                            <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                         </li>
                     </ul>
                 </nav>
@@ -158,10 +158,10 @@
                     <a href="blog.html">@Model.Value("industries")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("about")</a>
+                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("contacts")</a>
+                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                 </li>
             </ul>
         </nav>
@@ -254,8 +254,8 @@
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
                                 <a href="download/businessv7" class="button button--accent">@Model.Value("downloadButton")</a>
-                                @*<a href="https://www3.mekashron.com/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
-                                <a href="https://www3.mekashron.com/blog/en" class="link">@Model.Value("learnMore")</a>
+                                @*<a href="/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
+                                <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
 
                             </div>
                         </div>
@@ -332,13 +332,13 @@
                                     <a href="download/businessv7">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="blog.html">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                                 </li>
                             </ul>
                         </nav>
