--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -99,10 +99,10 @@
                             <a href="blog.html">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                            <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                            <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                         </li>
                     </ul>
                 </nav>
@@ -176,10 +176,10 @@
                     <a href="blog.html">@Model.Value("industries")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("about")</a>
+                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                 </li>
                 <li class="menu-item">
-                    <a href="payment.html">@Model.Value("contacts")</a>
+                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                 </li>
             </ul>
         </nav>
@@ -237,13 +237,13 @@
                                     <a href="download">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/about-us">@Model.Value("about")</a>
+                                    <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="blog.html">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www3.mekashron.com/blog/en/page/contactus">@Model.Value("contacts")</a>
+                                    <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
                                 </li>
                             </ul>
                         </nav>
