--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -193,7 +193,7 @@
                             <h3>@Model.Value("platformDevelopment")</h3>
                         </div>
                         <p>@Model.Value("customSystems")</p>
-                        <a href="#" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -201,7 +201,7 @@
                             <h3>@Model.Value("enterpriseSolutions")</h3>
                         </div>
                         <p>@Model.Value("reliableSystems")</p>
-                        <a href="#" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -209,7 +209,7 @@
                             <h3>@Model.Value("gaming")</h3>
                         </div>
                         <p>@Model.Value("iGaming")</p>
-                        <a href="#" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -217,7 +217,7 @@
                             <h3>@Model.Value("customApps")</h3>
                         </div>
                         <p>@Model.Value("tailor")</p>
-                        <a href="#" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
                     </li>
                 </ul>
             </div>
