--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -46,6 +46,22 @@
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <style>
+        .sub-menu {
+            text-align: left;
+            padding-left: 0;
+            list-style: none;
+        }
+        .sub-menu .menu-item {
+            padding-left: 0;
+            margin-left: 0;
+        }
+        .sub-menu .menu-item a {
+            display: block;
+            padding-left: 10px;
+            text-align: left;
+        }
+    </style>
 </head>
 
 <body>
