--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -109,10 +109,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -120,7 +120,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="blog.html">@Model.Value("industries")</a>
+                            <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/about-us">@Model.Value("about")</a>
@@ -132,7 +132,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="#" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     }
 
                     <div class="header__actions row">
-                        <a href="#" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                            <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
@@ -317,7 +317,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="delivery.html">@Model.Value("products")</a>
+                                    <a href="/blog/en">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
                                     @if (currentLangCode == "en")
@@ -333,7 +333,7 @@
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="blog.html">@Model.Value("industries")</a>
+                                    <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
