--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -92,10 +92,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -103,7 +103,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="blog.html">@Model.Value("industries")</a>
+                            <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/about-us">@Model.Value("about")</a>
@@ -115,7 +115,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="#" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </a>
 
                     <div class="header__actions row">
-                        <a href="#" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -160,10 +160,10 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                            <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                            <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -193,8 +193,8 @@
                     @Html.Raw(Model.Value("containerText"))
                 </p>
                 <div class="buttons">
-                    <a href="#" class="button">@Model.Value("exploreSolutions")</a>
-                    <a href="#" class="button button--dark">@Model.Value("getInTouch")</a>
+                    <a href="/download" class="/download">@Model.Value("exploreSolutions")</a>
+                    <a href="/blog/en/page/industries" class="button button--dark">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </section>
@@ -209,7 +209,7 @@
                             <h3>@Model.Value("platformDevelopment")</h3>
                         </div>
                         <p>@Model.Value("customSystems")</p>
-                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en/page/Platform-Development" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -217,7 +217,7 @@
                             <h3>@Model.Value("enterpriseSolutions")</h3>
                         </div>
                         <p>@Model.Value("reliableSystems")</p>
-                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en/page/Enterprise-Solutions" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -225,7 +225,7 @@
                             <h3>@Model.Value("gaming")</h3>
                         </div>
                         <p>@Model.Value("iGaming")</p>
-                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en/page/Gaming-Entertainment" class="link">@Model.Value("learnMore")</a>
                     </li>
                     <li>
                         <div class="row">
@@ -233,7 +233,7 @@
                             <h3>@Model.Value("customApps")</h3>
                         </div>
                         <p>@Model.Value("tailor")</p>
-                        <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
+                        <a href="/blog/en/page/Custom-Apps" class="link">@Model.Value("learnMore")</a>
                     </li>
                 </ul>
             </div>
@@ -320,7 +320,7 @@
             <div class="container">
                 <h2 style="text-align: center;">@Model.Value("readyToBuild")</h2>
                 <p style="text-align: center;">@Model.Value("tellUs")</p>
-                <a href="#" class="button">@Model.Value("getInTouch")</a>
+                <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
             </div>
         </section>
     </main>
@@ -342,7 +342,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="delivery.html">@Model.Value("products")</a>
+                                    <a href="/blog/en">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="download/businessv7">@Model.Value("solutions")</a>
@@ -351,7 +351,7 @@
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="blog.html">@Model.Value("industries")</a>
+                                    <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
