--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -100,10 +100,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                                    <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -111,7 +111,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="blog.html">@Model.Value("industries")</a>
+                            <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/about-us">@Model.Value("about")</a>
@@ -123,7 +123,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="#" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
                     }
 
                     <div class="header__actions row">
-                        <a href="#" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -177,10 +177,10 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Retailer-POS">@Model.Value("posretailers")</a>
+                            <a href="https://zmenu.net">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/blog/en/page/Restaurant-POS">@Model.Value("posrestaurant")</a>
+                            <a href="https://zmenu.net">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -246,7 +246,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="delivery.html">@Model.Value("products")</a>
+                                    <a href="/blog/en">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="download">@Model.Value("solutions")</a>
@@ -255,7 +255,7 @@
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="blog.html">@Model.Value("industries")</a>
+                                    <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/contactus">@Model.Value("contacts")</a>
