--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -193,7 +193,7 @@
                     @Html.Raw(Model.Value("containerText"))
                 </p>
                 <div class="buttons">
-                    <a href="/download" class="/download">@Model.Value("exploreSolutions")</a>
+                    <a href="/download" class="button">@Model.Value("exploreSolutions")</a>
                     <a href="/blog/en/page/industries" class="button button--dark">@Model.Value("getInTouch")</a>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                         <p>
                             @Model.Value("description")
                         </p>
-                        <a href="#" class="button button--accent">@Model.Value("aboutUs")</a>
+                        <a href="/blog/en/page/about-us" class="button button--accent">@Model.Value("aboutUs")</a>
                     </div>
                 </div>
             </div>
