--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -92,10 +92,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
+                                    <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
+                                    <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -160,10 +160,10 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
+                            <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
+                            <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -171,7 +171,7 @@
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="blog.html">@Model.Value("industries")</a>
+                    <a href="/blog/en/page/industries">@Model.Value("industries")</a>
                 </li>
                 <li class="menu-item">
                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
