--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -100,10 +100,10 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
+                                    <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
+                                    <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -177,10 +177,10 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www.zmenu.net">@Model.Value("posretailers")</a>
+                            <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
                         </li>
                         <li class="menu-item">
-                            <a href="https://www.zmenu.net">@Model.Value("posrestaurant")</a>
+                            <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
