download link moved to the blog link

--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -92,11 +92,11 @@
                         <li class="menu-item">
                             @if (currentLangCode == "en")
                             {
-                                <a href="/download">@Model.Value("solutions")</a>
+                                <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                             }
                             else
                             {
-                                <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                                <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                             }
                         </li>
                         <li class="menu-item menu-item-has-children">
@@ -176,11 +176,11 @@
                 <li class="menu-item">
                     @if (currentLangCode == "en")
                     {
-                    <a href="/download">@Model.Value("solutions")</a>
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                     }
                     else
                     {
-                    <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                     }
                     </li>
                 <li class="menu-item menu-item-has-children">
@@ -322,11 +322,11 @@
                                 <li class="menu-item">
                                     @if (currentLangCode == "en")
                                     {
-                                        <a href="/download">@Model.Value("solutions")</a>
+                                        <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                                     }
                                     else
                                     {
-                                        <a href="/@currentLangCode/download">@Model.Value("solutions")</a>
+                                        <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                                     }
                                     </li>
                                 <li class="menu-item">
