--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -80,7 +80,7 @@
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
                         <li class="menu-item">
-                            <a href="download/businessV7">@Model.Value("solutions")</a>
+                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                         </li>
                         <li class="menu-item menu-item-has-children">
                             <a>@Model.Value("products")</a>
@@ -148,7 +148,7 @@
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
                 <li class="menu-item">
-                    <a href="download/businessv7">@Model.Value("solutions")</a>
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                 </li>
                 <li class="menu-item menu-item-has-children">
                     <a href="#">@Model.Value("products")</a>
@@ -193,7 +193,7 @@
                     @Html.Raw(Model.Value("containerText"))
                 </p>
                 <div class="buttons">
-                    <a href="/download" class="button">@Model.Value("exploreSolutions")</a>
+                    <a href="/blog/en/page/solutions" class="button">@Model.Value("exploreSolutions")</a>
                     <a href="/blog/en/page/industries" class="button button--dark">@Model.Value("getInTouch")</a>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                             <h3>Mekashron CRM</h3>
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
-                                <a href="download/businessv7" class="button button--accent">@Model.Value("downloadButton")</a>
+                                <a href="/blog/en/page/solutions" class="button button--accent">@Model.Value("downloadButton")</a>
                                 @*<a href="/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
                                 <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
 
@@ -345,7 +345,7 @@
                                     <a href="/blog/en">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="download/businessv7">@Model.Value("solutions")</a>
+                                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
