--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -88,7 +88,7 @@
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
                         <li class="menu-item">
-                            <a href="/download">@Model.Value("solutions")</a>
+                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                         </li>
                         <li class="menu-item menu-item-has-children">
                             <a href="#">@Model.Value("products")</a>
@@ -165,7 +165,7 @@
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
                 <li class="menu-item">
-                    <a href="download">@Model.Value("solutions")</a>
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                 </li>
                 <li class="menu-item menu-item-has-children">
                     <a href="#">@Model.Value("products")</a>
@@ -249,7 +249,7 @@
                                     <a href="/blog/en">@Model.Value("products")</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="download">@Model.Value("solutions")</a>
+                                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
